# trendlist

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  trendlist.py
contrib/: .flake8  README.md  compare.sh  compare_bases.sh  compare_dists.sh  compare_weird_powers.sh  count_opposite_trends.py  count_trends.py  cycle_block.py  mean_forward_trends.py  mean_opposite_trends.py  more_uphill_trends.py  test_count_trends.py  uphills.py  weighted_mean.py
contrib/correspondence/: simple_trends.py
docs/source/: conf.py  index.md  usage.md
simple/: trendlist.py
simple/tests/: test_simple.py
spins/: spins.py
src/trendlist/: __init__.py  simple.py  trendlist.py
tests/: test_Trend.py  test_TrendList.py  test_package.py  test_simple.py  test_utils.py
